# landfill

./: README.md  example.py  setup.cfg  sigma_sweep_camera.py
data/: convert_to_numpy.py  mask_image_1.npy  srs_image_1.npy
examples/: basic.py
experiments/: metrics_plot.py  sigma_sweep_srs.py
landfill/: __init__.py  data.py  example.py  landfill.py  layers.py  model.py
