[metadata]
name = landfill
version = attr: landfill._version.__version__
author= Kevin Dalton, Ian Hunt-Isaak, John Russell
author_email=kmdalton@g.harvard.edu, ianhuntisaak@g.harvard.edu, johnrussell@g.harvard.edu
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url=https://github.com/Hekstra-Lab/landfill
platforms = Linux, Mac OS X, Windows
license = MIT
classifiers =
  Intended Audience :: Developers
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3 :: Only

[options]
python_requires = >=3.6

packages = find:

# Requiring nbformat to specify bugfix version which is not required by
# notebook - perhaps not needed anymore?
install_requires =
    torch
    pyro-ppl
    numpy
    cupy-cuda114
